--- a/signup.html
+++ b/signup.html
@@ -16,16 +16,20 @@
         <div class="header-container">
             <h1 class="title">Fixalo</h1>
             <nav class="nav-links">
-                <a href="index.html" class="home-link">Home</a>
-                <a href="index.html#services">Services</a>
-                <a href="professionals.html">Professionals</a>
-                <a href="index.html#how-it-works">How It Works</a>
-                <a href="index.html#contact">Contact</a>
-                <button class="cta-button">Book a Pro</button>
+                <div class="main-nav-items">
+                    <a href="index.html">Home</a> <!-- Added Home link explicitly -->
+                    <a href="index.html">Services</a>
+                    <a href="#how-it-works">How It Works</a>
+                    <a href="#contact">Contact</a>
+                </div>
+                <div class="auth-buttons">
+                    <button class="login-button">Login</button>
+                    <button class="cta-button" onclick="location.href='signup.html'">Sign Up</button>
+                </div>
             </nav>
         </div>
     </header>
-
+    
     <section class="page-banner">
         <div class="banner-content">
             <h1>Join the Fixalo Team! 🤝</h1>
@@ -77,6 +81,23 @@
             </div>
 
             <div class="form-group">
+                <label for="username">Username:</label>
+                <input type="text" id="username" name="username" minlength="5" required>
+                <p class="form-hint">Minimum 5 characters.</p>
+            </div>
+
+            <div class="form-group">
+                <label for="password">Password:</label>
+                <input type="password" id="password" name="password" minlength="8" required>
+                <p class="form-hint">Minimum 8 characters.</p>
+            </div>
+
+            <div class="form-group">
+                <label for="confirmPassword">Confirm Password:</label>
+                <input type="password" id="confirmPassword" name="confirmPassword" minlength="8" required>
+            </div>
+
+            <div class="form-group">
                 <label>Main Service Category(ies):</label>
                 <div id="mainServiceCheckboxes" class="checkbox-group">
                     <label><input type="checkbox" name="mainService" value="plumbing"> Plumbing</label>
@@ -112,4 +133,3 @@
             <h4 class="footertext">Copyright © Fixalo</h4>
             <h4 class="footertext">Contact: hello@fixalo.com</h4>
         </div>
-    </footer>
