--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
     <main>
         <div id="Content">
-            <a href="plumbing.html" id="Plumbing" class="service-box">
+            <a href="service-listing.html" id="Plumbing" class="service-box">
                 <img src="images/PlumberImage.jpg" onerror="this.onerror=null;this.src='https://placehold.co/400x200/FFD700/36454F?text=Plumbing';" alt="Plumbing" />
                 <p>Plumbing</p>
             </a>
