--- a/book-appointment.html
+++ b/book-appointment.html
@@ -226,7 +226,7 @@
                 // (e.g., in functions.js if you had a global bookings array)
 
                 setTimeout(() => {
-                    window.location.href = 'customer-account.html'; // Redirect to customer dashboard
+                    window.location.href = 'customer-account-page.html'; // Redirect to customer dashboard
                 }, 2000);
             });
         });
