--- a/signup.html
+++ b/signup.html
@@ -43,7 +43,7 @@
 
     <main class="application-form-container" style="max-width: 600px; text-align: center;">
         <div style="display: flex; flex-direction: column; gap: 20px; padding: 20px;">
-            <a href="customer-sign-up.html" class="submit-application-button">
+            <a href="customer-signup.html" class="submit-application-button">
                 <i class="fas fa-user"></i> Sign Up as a Customer
             </a>
             <a href="professional-sign-up.html" class="submit-application-button">
