--- a/professional-account-page.html
+++ b/professional-account-page.html
@@ -62,7 +62,11 @@
                 </div>
                 <div class="form-group">
                     <label for="profMobileNumber">Mobile Number:</label>
-                    <input type="tel" id="profMobileNumber" name="profMobileNumber" pattern="[0-9]{8,}" title="Please enter a valid mobile number (at least 8 digits)" value="+35612345678" required>
+                    <div class="mobile-input-group">
+                        <select id="profCountryCode" name="profCountryCode" class="country-code-select"></select>
+                        <input type="tel" id="profMobileNumber" name="profMobileNumber" pattern="[0-9]{8}" title="Please enter an 8-digit mobile number" required>
+                    </div>
+                    <p class="form-hint">Please enter an 8-digit mobile number.</p>
                 </div>
                 <div class="form-group">
                     <label for="profCountry">Country:</label>
@@ -88,11 +92,7 @@
                 </div>
 
                 <h4>Professional Details</h4>
-                <div class="form-group">
-                    <label for="profSpecialty">Primary Specialization:</label>
-                    <input type="text" id="profSpecialty" name="profSpecialty" value="Plumbing, Emergency Leaks" required>
-                    <p class="form-hint">e.g., Emergency Leaks, Custom Cabinets, Electrical Wiring.</p>
-                </div>
+                <!-- Removed Primary Specialization field as it's now covered by Specific Services Offered -->
                 <div class="form-group">
                     <label>Main Service Category(ies):</label>
                     <div id="profMainServiceCheckboxes" class="checkbox-group">
@@ -153,7 +153,7 @@
                     <li><strong>July 15, 2025 - 10:00 AM:</strong> Leak Repair (Customer: Jane Doe) <button class="button-small">View Details</button></li>
                     <li><strong>July 20, 2025 - 02:00 PM:</strong> Boiler Service (Customer: Mark Smith) <button class="button-small">View Details</button></li>
                 </ul>
-                <button class="button-primary">Manage All Bookings</button>
+                <button class="button-primary" id="manageAllBookingsButton">Manage All Bookings</button>
             </div>
         </section>
 
