--- a/professional-sign-up.html
+++ b/professional-sign-up.html
@@ -60,7 +60,11 @@
 
             <div class="form-group">
                 <label for="mobileNumber">Mobile Number:</label>
-                <input type="tel" id="mobileNumber" name="mobileNumber" pattern="[0-9]{8,}" title="Please enter a valid mobile number (at least 8 digits)" required>
+                <div class="mobile-input-group">
+                    <select id="profSignupCountryCode" name="profSignupCountryCode" class="country-code-select"></select>
+                    <input type="tel" id="mobileNumber" name="mobileNumber" pattern="[0-9]{8}" title="Please enter an 8-digit mobile number" required>
+                </div>
+                <p class="form-hint">Please enter an 8-digit mobile number.</p>
             </div>
 
             <div class="form-group">
@@ -132,3 +136,7 @@
             <h4 class="footertext">Copyright © Fixalo</h4>
             <h4 class="footertext">Contact: hello@fixalo.com</h4>
         </div>
+    </footer>
+
+</body>
+</html>
