--- a/index.html
+++ b/index.html
@@ -14,13 +14,12 @@
 
     <header>
         <div class="header-container">
-            <h1 class="title">Fixalo</h1>
+            <h1 class="title">FixingFixes</h1>
             <nav class="nav-links">
                 <div class="main-nav-items">
                     <a href="index.html">Home</a>
                     <a href="#Content">Services</a>
                     <a href="#how-it-works">How It Works</a>
-                    <a href="professional-apply-page.html">Apply</a> <!-- Ensure this path is correct for apply page -->
                     <a href="#contact">Contact</a>
                 </div>
                 <div class="auth-buttons">
@@ -91,8 +90,8 @@
 
     <footer id="contact">
         <div id="footercontent">
-            <h4 class="footertext">Copyright © Fixalo</h4>
-            <h4 class="footertext">Contact: hello@fixalo.com</h4>
+            <h4 class="footertext">Copyright © FixingFixes</h4>
+            <h4 class="footertext">Contact: hello@FixingFixes.com</h4>
         </div>
     </footer>
 
