--- a/professional-account-page.html
+++ b/professional-account-page.html
@@ -14,7 +14,7 @@
 
     <header>
         <div class="header-container">
-            <h1 class="title">Fixalo</h1>
+            <h1 class="title">FixingFixes</h1>
             <nav class="nav-links">
                 <div class="main-nav-items">
                     <a href="index.html">Home</a>
@@ -31,7 +31,7 @@
     
     <section class="page-banner">
         <div class="banner-content">
-            <h1>Welcome Back, Professional! ✨</h1>
+            <h1>Welcome Back, Professional!</h1>
             <p>Manage your profile, bookings, and services.</p>
             <a href="index.html" class="back-link">← Back to Home</a>
         </div>
@@ -181,7 +181,7 @@
             <h3><i class="fas fa-cogs"></i> Account Settings</h3>
             <div class="dashboard-card">
                 <h4>Delete Account</h4>
-                <p>Permanently delete your Fixalo professional account.</p>
+                <p>Permanently delete your FixingFixes professional account.</p>
                 <button class="button-delete"><i class="fas fa-trash-alt"></i> Delete Account</button>
                 <div id="deleteAccountMessage" class="form-message"></div>
             </div>
@@ -190,8 +190,8 @@
 
     <footer id="contact">
         <div id="footercontent">
-            <h4 class="footertext">Copyright © Fixalo</h4>
-            <h4 class="footertext">Contact: hello@fixalo.com</h4>
+            <h4 class="footertext">Copyright © FixingFixes</h4>
+            <h4 class="footertext">Contact: hello@FixingFixes.com</h4>
         </div>
     </footer>
 
