--- a/customer-signup.html
+++ b/customer-signup.html
@@ -14,7 +14,7 @@
 
     <header>
         <div class="header-container">
-            <h1 class="title">Fixalo</h1>
+            <h1 class="title">FixingFixes</h1>
             <nav class="nav-links">
                 <div class="main-nav-items">
                     <a href="index.html">Home</a>
@@ -31,7 +31,7 @@
     
     <section class="page-banner">
         <div class="banner-content">
-            <h1>Create Your Customer Account! 🛍️</h1>
+            <h1>Create Your Customer Account!</h1>
             <p>Sign up to easily browse services and book trusted tradespeople.</p>
             <a href="signup.html" class="back-link">← Back to Sign Up Options</a>
         </div>
@@ -91,8 +91,8 @@
 
     <footer id="contact">
         <div id="footercontent">
-            <h4 class="footertext">Copyright © Fixalo</h4>
-            <h4 class="footertext">Contact: hello@fixalo.com</h4>
+            <h4 class="footertext">Copyright © FixingFixes</h4>
+            <h4 class="footertext">Contact: hello@FixingFixes.com</h4>
         </div>
     </footer>
 
