--- a/message-page.html
+++ b/message-page.html
@@ -14,7 +14,7 @@
 
     <header>
         <div class="header-container">
-            <h1 class="title">Fixalo</h1>
+            <h1 class="title">FixingFixes</h1>
             <nav class="nav-links">
                 <div class="main-nav-items">
                     <a href="index.html">Home</a>
@@ -31,9 +31,9 @@
     
     <section class="page-banner">
         <div class="banner-content">
-            <h1>Your Inbox 💬</h1>
+            <h1>Your Inbox</h1>
             <p>Communicate directly with your booked professionals.</p>
-            <a href="customer-account.html" class="back-link">← Back to Dashboard</a>
+            <a href="customer-account-page.html" class="back-link">← Back to Dashboard</a>
         </div>
     </section>
 
@@ -68,8 +68,8 @@
 
     <footer id="contact">
         <div id="footercontent">
-            <h4 class="footertext">Copyright © Fixalo</h4>
-            <h4 class="footertext">Contact: hello@fixalo.com</h4>
+            <h4 class="footertext">Copyright © FixingFixes</h4>
+            <h4 class="footertext">Contact: hello@FixingFixes.com</h4>
         </div>
     </footer>
 
