--- a/professional-sign-up.html
+++ b/professional-sign-up.html
@@ -14,7 +14,7 @@
 
     <header>
         <div class="header-container">
-            <h1 class="title">Fixalo</h1>
+            <h1 class="title">FixingFixes</h1>
             <nav class="nav-links">
                 <div class="main-nav-items">
                     <a href="index.html">Home</a> <!-- Added Home link explicitly -->
@@ -31,8 +31,8 @@
     
     <section class="page-banner">
         <div class="banner-content">
-            <h1>Join the Fixalo Team! 🤝</h1>
-            <p>Are you a skilled tradesperson? Apply to offer your services through Fixalo.</p>
+            <h1>Join the FixingFixes Team! </h1>
+            <p>Are you a skilled tradesperson? Apply to offer your services through FixingFixes.</p>
             <a href="index.html" class="back-link">← Back to Home</a>
         </div>
     </section>
@@ -133,8 +133,8 @@
 
     <footer id="contact">
         <div id="footercontent">
-            <h4 class="footertext">Copyright © Fixalo</h4>
-            <h4 class="footertext">Contact: hello@fixalo.com</h4>
+            <h4 class="footertext">Copyright © FixingFixes</h4>
+            <h4 class="footertext">Contact: hello@FixingFixes.com</h4>
         </div>
     </footer>
 
