--- a/service-listing.html
+++ b/service-listing.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fixalo – Plumbing Services</title>
+    <title>Fixalo – Service Listing</title> <!-- Generic Title for JS to update -->
     <link rel="stylesheet" type="text/css" href="CSS/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Lato&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <!-- Font Awesome for star icons and other icons -->
@@ -12,15 +12,16 @@
 </head>
 <body>
 
-
     <header>
         <div class="header-container">
-            <h1 class="title">Fixalo</h1>
+            <h1 class="title">FixingFixes</h1>
             <nav class="nav-links">
                 <div class="main-nav-items">
-                    <a href="index.html">Home</a> <!-- Added Home link explicitly -->
-                    <a href="#how-it-works">How It Works</a>
-                    <a href="#contact">Contact</a>
+                    <a href="index.html">Home</a>
+                    <a href="services.html">Services</a> <!-- Link to a general services overview, or #Content on index -->
+                    <a href="index.html#how-it-works">How It Works</a>
+                    <a href="professional-apply-page.html">Apply</a>
+                    <a href="index.html#contact">Contact</a>
                 </div>
                 <div class="auth-buttons">
                     <button class="login-button" id="loginHeaderButton">Login</button>
@@ -32,14 +33,14 @@
 
     <section class="page-banner">
         <div class="banner-content">
-            <h1>Expert Plumbers Ready to Help 💧</h1>
-            <p>Find highly-rated, reliable plumbers for all your needs.</p>
+            <h1 id="serviceTitle">Loading Service...</h1> <!-- Dynamic H1 updated by JS -->
+            <p id="serviceDescription">Discover trusted professionals for various services.</p> <!-- Dynamic P updated by JS -->
             <a href="index.html#services" class="back-link">← Back to Services</a>
         </div>
     </section>
 
     <div class="section-title">
-        <h2>Available Plumbers</h2>
+        <h2 id="availableProfessionalsTitle">Available Professionals</h2> <!-- Dynamic H2 updated by JS -->
     </div>
 
     <section class="filters-container">
@@ -82,14 +83,17 @@
         </div>
     </section>
 
-    <main id="plumbersDisplay" class="plumber-list-container">
-        <!-- Plumber cards will be dynamically loaded here by JavaScript -->
-        <p class="loading-message">Loading plumbers...</p>
+    <main id="serviceDisplay" class="plumber-list-container"> <!-- Changed ID to be generic -->
+        <!-- Professional cards will be dynamically loaded here by JavaScript -->
+        <p class="loading-message">Loading professionals...</p>
     </main>
 
     <footer id="contact">
         <div id="footercontent">
-            <h4 class="footertext">Copyright © Fixalo</h4>
-            <h4 class="footertext">Contact: hello@fixalo.com</h4>
+            <h4 class="footertext">Copyright © FixingFixes</h4>
+            <h4 class="footertext">Contact: hello@FixingFixes.com</h4>
         </div>
     </footer>
+
+</body>
+</html>
