--- a/signup.html
+++ b/signup.html
@@ -14,7 +14,7 @@
 
     <header>
         <div class="header-container">
-            <h1 class="title">Fixalo</h1>
+            <h1 class="title">FixingFixes</h1>
             <nav class="nav-links">
                 <div class="main-nav-items">
                     <a href="index.html">Home</a>
@@ -31,7 +31,7 @@
 
     <section class="page-banner">
         <div class="banner-content">
-            <h1>Join Fixalo! Choose Your Role.</h1>
+            <h1>Join FixingFixes! Choose Your Role.</h1>
             <p>Are you looking to book services, or offer your professional skills?</p>
             <a href="index.html" class="back-link">← Back to Home</a>
         </div>
@@ -54,8 +54,8 @@
 
     <footer id="contact">
         <div id="footercontent">
-            <h4 class="footertext">Copyright © Fixalo</h4>
-            <h4 class="footertext">Contact: hello@fixalo.com</h4>
+            <h4 class="footertext">Copyright © FixingFixes</h4>
+            <h4 class="footertext">Contact: hello@FixingFixes.com</h4>
         </div>
     </footer>
 
