--- a/login.html
+++ b/login.html
@@ -31,7 +31,7 @@
 
     <section class="page-banner">
         <div class="banner-content">
-            <h1>Welcome Back! 👋</h1>
+            <h1>Welcome Back!</h1>
             <p>Log in to manage your bookings or professional profile.</p>
             <a href="index.html" class="back-link">← Back to Home</a>
         </div>
