--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <!-- Font Awesome for icons if needed (not directly used here but good practice to include if used globally) -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <script src="Javascript/functions.js" defer></script> <!-- Link to functions.js -->
+    <script type="module" src="Javascript/functions.js" defer></script> <!-- Link to functions.js -->
 </head>
 <body>
 
