--- a/customer-signup.html
+++ b/customer-signup.html
@@ -12,6 +12,93 @@
     <script src="https://www.gstatic.com/firebasejs/10.12.1/firebase-firestore.js"></script>
     <script type="module" src="Javascript/functions.js" defer></script> <!-- Link to functions.js -->
 </head>
+
+<script>
+
+    async function signUp(email, password, userType, userData = {}) {
+    console.log("Attempting to sign up with email:", email, "userType:", userType, "username:", userData.username); // Added debug log
+    if (!auth) {
+        showModal("Error", "Firebase authentication not initialized. Please ensure Firebase configuration is correct.", false);
+        console.error("Firebase Auth is undefined. Cannot sign up.");
+        return;
+    }
+    if (!db) {
+        showModal("Error", "Firestore database not initialized. Please ensure Firebase configuration is correct.", false);
+        console.error("Firestore DB is undefined. Cannot sign up.");
+        return;
+    }
+
+    try {
+        // --- Uniqueness Checks (Email and Username) ---
+        console.log("Checking for existing email and username in Firestore...");
+        const usersRef = collection(db, "users");
+        const emailQuery = query(usersRef, where("email", "==", email));
+        const usernameQuery = query(usersRef, where("username", "==", userData.username)); // Assuming username is passed in userData
+
+        const [emailSnapshot, usernameSnapshot] = await Promise.all([
+            getDocs(emailQuery),
+            getDocs(usernameQuery)
+        ]);
+
+        if (!emailSnapshot.empty) {
+            showModal("Sign Up Error", "This email is already registered. Please use a different email or log in.", false);
+            console.error("Sign Up Failed: Email already in use:", email);
+            return;
+        }
+        if (!usernameSnapshot.empty) {
+            showModal("Sign Up Error", "This username is already taken. Please choose a different username.", false);
+            console.error("Sign Up Failed: Username already taken:", userData.username);
+            return;
+        }
+        console.log("Email and username are unique.");
+
+        // --- Create User in Firebase Authentication ---
+        console.log("Calling createUserWithEmailAndPassword...");
+        const userCredential = await createUserWithEmailAndPassword(auth, email, password);
+        const user = userCredential.user;
+        console.log("User successfully created in Firebase Auth. UID:", user.uid);
+
+        // --- Store User Data in Firestore ---
+        const userRef = doc(db, "users", user.uid); // Use UID as document ID
+        console.log("Setting user document in Firestore for UID:", user.uid);
+        await setDoc(userRef, {
+            email: email,
+            userType: userType,
+            authUid: user.uid, // Store the Firebase Auth UID in the document
+            ...userData,
+            createdAt: new Date()
+        });
+        console.log("User document successfully set in Firestore for UID:", user.uid);
+
+        localStorage.setItem('loggedInUserId', user.uid);
+        localStorage.setItem('loggedInUserType', userType);
+        // Store the username in local storage for consistency with existing dummy data logic
+        localStorage.setItem('loggedInUser', userData.username); 
+        localStorage.setItem('isLoggedIn', 'true'); // Explicitly set isLoggedIn
+
+        showModal("Success", "Account created successfully! Redirecting...", false);
+
+        // Navigate after a short delay to allow user to see the success message
+        setTimeout(() => {
+            if (userType === 'customer') {
+                navigateTo('main-index-page.html');
+            } else if (userType === 'tradesperson') {
+                navigateTo('plumber-profile-page.html'); // Navigate to a default profile page for tradespeople
+            }
+        }, 1500); // 1.5 second delay
+        
+    } catch (error) {
+        console.error("Error during sign-up process:", error);
+        let errorMessage = `Failed to create account: ${error.message}`;
+        if (error.code === 'auth/email-already-in-use') {
+            errorMessage = "This email is already registered. Please use a different email or log in.";
+        } else if (error.code === 'auth/weak-password') {
+            errorMessage = "Password is too weak. Please choose a stronger password.";
+        }
+        showModal("Sign Up Error", errorMessage, false);
+    }
+}
+</script>
 <body>
 
     <header>
